Updating package.json
Modified description

--- a/API/package.json
+++ b/API/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolioapi",
   "version": "0.0.1",
-  "description": "API for Portfolio project.",
+  "description": "API for Portfolio project. API using express.js.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
